500% Bonus - index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Ende Meta Pixel Code -->
 
   <!-- Automatische Weiterleitung nach 0,3 Sekunden -->
-  <meta http-equiv="refresh" content="0.3; URL=https://1wkomt.com/?open=register&p=zf0c">
+  <meta http-equiv="refresh" content="0.3; URL=https://1wxvan.com/v3/aggressive-casino?p=zf0c">
 </head>
 <body>
   <p>Du wirst weitergeleitet...</p>
