🇹🇷 500% Bonus index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   <meta http-equiv="refresh" content="0.3; URL=https://1wxvan.com/v3/aggressive-casino?p=zf0c">
 </head>
 <body>
-  <p>Du wirst weitergeleitet...</p>
+  <p>Yönlendirileceksiniz...</p>
 </body>
 </html>
